--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 title: Tshifhumulo Mapasa
-#logo: /Tshifhumulo.jpg
+logo: /Tshifhumulo.jpg
 description: Data Analyst| Data Scientist| BI Analyst
-#show_downloads: true
 theme: jekyll-theme-minimal
